# icsbom

./: README.md  REUSE.toml  pyproject.toml
.github/workflows/: build.yml
.reuse/: dep5
icsbom/: __init__.py  __main__.py  icsbom.py
